tree-sitter-cook/grammar.js
    source_file: ($) => repeat($._toplevel_item),

    _toplevel_item: ($) =>
      choice(
        $.recipe,
        $.chore,
        $.files_declaration,
        $.tools_declaration,
        $.probe,
        $.config_block,
        $.register_block,
        $.top_level_module_call,
        $.use_declaration,
        $.import_declaration,
        $.comment,
        $._newline,
      ),

    _newline: ($) => /\n/,

    // ── Top-level declarations ─────────────────────────────────

    // App. A.2 (CS-0206). Two forms behind one keyword:
    //   `use NAME`            — the name form, unchanged since CS-0035;
    //   `use ALIAS? PATH`     — the path form, PATH ending in `.lua`.
    // The three productions share the prefix `"use" _lua_ident_name`, so the
    // choice between binding that identifier as `module` or as `alias` is
    // settled by one token of lookahead: a NEWLINE closes the name form, a
    // `use_path` continues the path form.
    use_declaration: ($) =>
      seq(
        "use",
        choice(
          field("module", $._lua_ident_name),
          seq(
            optional(field("alias", $._lua_ident_name)),
            field("path", $._use_path),
          ),
        ),
        $._newline,
      ),

    recipe: ($) =>
      prec.right(
        seq(
          $._recipe_header,
          $._newline,
          repeat($._recipe_item),
        ),
      ),

    _recipe_header: ($) => $.explicit_recipe_header,

    explicit_recipe_header: ($) =>
      prec(
        1,
        seq(
          "recipe",
          field("name", $._decl_name),
          optional(seq(":", $.dependency_list)),
        ),
      ),

    dependency_list: ($) => repeat1($._name),

    // ── Chores ─────────────────────────────────────────────────

    lua_expr_default: ($) =>
      seq(
        "(",
        repeat($._lua_expr_chunk),
        ")",
      ),

    _lua_expr_chunk: ($) =>
      choice(
        $.lua_expr_default, // nested parens
        token(/"(?:[^"\\\n]|\\[^\n])*"/),
        token(/'(?:[^'\\\n]|\\[^\n])*'/),
        token(prec(-1, /[^()"'\n]+/)),
      ),

    _bare_probe_key: ($) =>
      token(/[A-Za-z_][A-Za-z0-9_-]*(:[A-Za-z_][A-Za-z0-9_-]*)*/),

    // Module-prefix-colon disambiguation (App. A.3.2, normative). The
    // dep-list-introducing `:` is distinguished from the module-prefix
    // `:` purely positionally: the dep-list colon is followed by
    // whitespace or end-of-line, the module-prefix colon by an ident
    // char. tree-sitter's token regexes can't express lookahead, so the
    // dep-colon token consumes one trailing whitespace char; maximal
    // munch then prefers it over `_bare_probe_key`'s internal colon only
    // when a space follows (`p: a` → deps), while `cc:zlib` (no space)
    // stays a single name token — as does any longer chain (`a:b:c`,
    // CS-0201).
    _recipe_item: ($) =>
      choice(
        seq(
          $._recipe_indent,
          choice(
            $.ingredients_step,
            $.gather_step,
            $.seal_step,
            $.cook_step,
            $.test_step,
            $.module_call,
          ),
        ),
        $.comment,
        $._newline,
      ),

    // App. A.4 + CS-0078 multi-line patterns:
    //   ingredients_step ::= "ingredients" (ingredient+ | probe_ref) NEWLINE
    //   ingredient       ::= STRING | "!" STRING
    // CONT is an external token (_step_continuation_newline) emitted only
    // when the next line begins with `"` or `!"`; otherwise the declaration
    // terminates and the next line dispatches per App. A.4's priority order.
    // The quote-vs-bare discriminator makes filesystem items mutually
    // exclusive with a probe source. Since CS-0201 a probe key has no
    // segment cap, so `ns:cards:items` lexes as one key; whether a
    // trailing segment selects a field is resolved at register time, not
    // in the grammar.
    gather_step: ($) =>
      choice(
        seq(
          "gather",
          choice($.string, $.ingredient_exclude),
          repeat(seq(optional($._step_continuation_newline), choice($.string, $.ingredient_exclude))),
          $._newline,
        ),
        seq(
          "gather",
          field("source", alias($._bare_probe_key, $.identifier)),
          repeat(seq(optional($._step_continuation_newline), $.string)),
          $._newline,
        ),
      ),

    seal_step: ($) =>
      seq(
        "seal",
        repeat1($._disposition_ref),
        $._newline,
      ),

    // App. A.4 multi-output rule: when two or more outputs are given,
    // the body MUST be a block (`>{...}` or `{...}`); a bare string
    // simply joins the output-pattern list. CS-0099: the body opener
    // follows the output pattern(s) directly (no `using` introducer).
    // CS-0078: subsequent output STRINGs MAY appear on continuation lines
    // beginning with `"`; the `_step_continuation_newline` external token
    // absorbs the intervening newline + whitespace.
    cook_step: ($) =>
      seq(
        "cook",
        choice(
          field("outputs", $.lua_expr_output),
          seq(
            field("outputs", $.string),
            repeat(seq(
              optional($._step_continuation_newline),
              field("outputs", $.string),
            )),
          ),
        ),
        field("body", choice($.shell_block, $.exec_lua_block)),
        optional($.cook_mods),
        $._newline,
      ),

    cook_mods: ($) => $.share_mod,

    _disposition_ref: ($) =>
      choice(
        alias(token(prec(1, /[A-Za-z_][A-Za-z0-9_-]*(:[A-Za-z_][A-Za-z0-9_-]*)+/)), $.identifier),
        alias($._bare_probe_key, $.identifier),
        $.string,
      ),

    share_mod: ($) => choice("local", "pinned", "nondet"),

    // §8.4.2 (CS-0089): `cook (LUA_EXPR)` — a parenthesised Lua expression
    // in the output slot, evaluated once per ingredient at register time.
    // Balanced-paren interior with single-level quoted-string opacity
    // (mirrors the §7.1.1 chore-param scanner; Lua long-brackets are NOT
    // handled, per the documented v1 limitation in §8.4.2).
    // Reuses `_lua_expr_chunk` from the §7.1.1 chore-param scanner above
    // (same balanced-paren + quoted-string opacity contract).
    lua_expr_output: ($) => seq("(", repeat($._lua_expr_chunk), ")"),

    // App. A.4 `exec_lua_block`: the `>{ … }` execute-phase Lua block in a
    // cook/test body, with §6.4 input/output bindings.
    exec_lua_block: ($) =>
      seq(">{", alias($._lua_block_content, $.lua_code), "}"),

    // Body chunks: scanner-emitted SHELL_BLOCK_CONTENT segments interleaved
    // with `$<IDENT>` placeholders (§2.11). The scanner stops at each
    // valid placeholder boundary so the grammar can lex it as a token.
    shell_block: ($) =>
      seq(
        "{",
        repeat(
          choice(
            alias($._shell_block_content, $.shell_content),
            $.placeholder,
          ),
        ),
        "}",
      ),

    test_step: ($) =>
      seq(
        "test",
        field("body", choice($.shell_block, $.exec_lua_block)),
        $._newline,
      ),

    module_call: ($) =>
      seq(
        alias($._top_level_module_call_text, $.module_call_text),
        $._newline,
      ),

    _name: ($) => choice(alias($._bare_identifier, $.identifier), $.string),

    _decl_name: ($) =>
      choice(
        alias($._decl_bare, $.identifier),
        alias($._decl_string, $.string),
      ),
    _lua_ident_name: ($) =>
      choice(
        alias($._lua_ident, $.identifier),
        alias($._lua_ident_string, $.string),
      ),
    _use_path: ($) =>
      choice(
        alias($._use_path_bare, $.path),
        alias($._use_path_string, $.string),
      ),
    placeholder: ($) =>
      seq(
        "$<",
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),

    _string_placeholder: ($) =>
      seq(
        token.immediate("$<"),
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),

    // String literals expose their inner placeholders. The fallback
    // `_string_chunk` keeps a bare `$` as text so a real placeholder
    // (which requires `$<`) is the only thing that consumes the `$<`
    // pair. NOTE: §2.11 strict-bail says a malformed `$<bad spaces>`
    // is literal text; with this structured rule the seq commits to
    // `$<` and errors at the missing `>`. The Rust parser remains the
    // source of truth for that edge case.
    // CS-0061: STRING admits both double- and single-quoted forms.
    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($._string_placeholder, $.placeholder),
              $._dq_string_chunk,
            ),
          ),
          token.immediate('"'),
        ),
        seq(
          "'",
          repeat(
            choice(
              alias($._sq_string_placeholder, $.placeholder),
              $._sq_string_chunk,
            ),
          ),
          token.immediate("'"),
        ),
      ),

    _dq_string_chunk: ($) =>
      choice(
        token.immediate(/[^"$]+/),
        token.immediate("$"),
      ),

    _sq_string_chunk: ($) =>
      choice(
        token.immediate(/[^'$]+/),
        token.immediate("$"),
      ),

    _sq_string_placeholder: ($) =>
      seq(
        token.immediate("$<"),
        alias(
          token.immediate(/[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*\[in\]|[A-Za-z_][A-Za-z0-9_.-]*:[A-Za-z_][A-Za-z0-9_.-]*(?:\.[A-Za-z_][A-Za-z0-9_]*)?(?:\[[0-9]+\])?|[A-Za-z_][A-Za-z0-9_]*(?:\.[A-Za-z_][A-Za-z0-9_]*)*/),
          $.placeholder_ident,
        ),
        token.immediate(">"),
      ),
