tree-sitter-cook/test/corpus/recipes.txt
================
Recipe with dependencies
================

recipe build: lib setup

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)
      (dependency_list
        (identifier)
        (identifier)))))

================
Recipe with dotted deps
================

recipe all: backend.build frontend.build

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)
      (dependency_list
        (identifier)
        (identifier)))))

================
Recipe with quoted name
================

recipe "my build": "dep one"

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (string)
      (dependency_list
        (string)))))

================
Recipe with gather
================

recipe lib: setup
    gather "lib/*.c" "include/*.h"

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)
      (dependency_list
        (identifier)))
    (gather_step
      (string)
      (string))))

================
Recipe with gather
================

recipe lib
    gather "lib/*.c" !"lib/generated.c"
    cook "build/$<in.stem>.o" { cc -c $<in> -o $<out> }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string)
      (gather_exclude
        (string)))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Recipe gathering a named source
================

recipe lib
    gather sources "include/*.h"
    cook "build/$<in.stem>.o" { cc -c $<in> -o $<out> }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (identifier)
      (string))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Recipe with cook step
================

recipe lib: setup
    cook "build/obj/{in.stem}.o" {
        {CC} -c {in} -o {out}
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)
      (dependency_list
        (identifier)))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Recipe with test step
================

recipe run-tests: build
    gather "build/bin/test_*"
    test { ./{in} }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)
      (dependency_list
        (identifier)))
    (gather_step
      (string))
    (test_step
      body: (shell_block
        (shell_content)))))

================
Cook with inline lua block
================

recipe lib: setup
    gather "lib/*.c"
    cook "build/{in.stem}.o" >{
        cook.sh(var.CC .. " -c " .. input .. " -o " .. output)
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)
      (dependency_list
        (identifier)))
    (gather_step
      (string))
    (cook_step
      outputs: (string)
      body: (exec_lua_block
        (lua_code)))))

================
Cook multi-output with shell block
================

recipe wasm
    gather "src/*.rs"
    cook "a.js" "b.wasm" {
        wasm-pack build
        cp pkg/a.js a.js
        cp pkg/b.wasm b.wasm
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string))
    (cook_step
      outputs: (string)
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Cook multi-output with lua block
================

recipe gen
    cook "out/parser.rs" "out/parser.h" >{
        cook.sh("lalrpop src/grammar.lalrpop --out-dir out")
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      outputs: (string)
      body: (exec_lua_block
        (lua_code)))))

================
Gather with exclude
================

recipe pack
    gather "src/*.c" !"src/excluded.c"

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string)
      (gather_exclude
        (string)))))

================
Recipe-body module call (CS-0072)
================

use cpp

recipe colorize
    cpp.bin("colorize", { sources = { "src/colorize.c" } })

---

(source_file
  (use_declaration
    module: (identifier))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))))

================
Gather from probe refs (CS-0201: a selector is part of the key)
================

recipe cards
    gather card-set

recipe namespaced
    gather ns:cards

recipe selected
    gather ns:cards:items

recipe deep
    gather ns:cards:items:extra

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (identifier)))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (identifier)))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (identifier)))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (identifier))))

================
Gather quoted continuation
================

recipe pack
    gather "src/*.c"
        !"src/legacy.c"

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string)
      (gather_exclude
        (string)))))

================
Malformed input selectors
================

recipe missing-field
    gather ns:cards:

recipe quoted-selector
    gather "ns:cards":items

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (identifier)
    (lua_code))
  (recipe
    (explicit_recipe_header
      name: (identifier)))
  (ERROR
    (string)
    (lua_code)))

================
Seal accepts a multi-segment key and the quoted form (CS-0201)
================

recipe pinned-seal
    seal ns:key:field "odd+spelling"

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (string))))

================
Cook step (multi-line outputs, CS-0078)
================

recipe maps
    gather "src/*.map"
    cook "build/$<in.stem>.aas48"
         "build/$<in.stem>.aas96"
         "build/$<in.stem>.aas120" {
        runaas $<in>
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      outputs: (string
        (placeholder
          (placeholder_ident)))
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Gather step (multi-line with exclude, CS-0078)
================

recipe build
    gather "neo/sys/*.cpp"
                "neo/sys/posix/*.cpp"
                !"neo/sys/sdl/*.cpp"
    cook "build/sys.o" {
        echo build
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string)
      (string)
      (gather_exclude
        (string)))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Cook plain-shell block with nested braces in content
================

recipe x
    cook "out" {
        echo "hello { world }"
        for f in a b; do echo "{ $f }"; done
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Cook Lua block with multi-line long-string opaque-span (CS-0035)
================

recipe build
    cook "out" >{
        local s = [[
            this string contains a } brace
            and another } here
        ]]
        print(s)
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (exec_lua_block
        (lua_code)))))

================
Cook Lua block with multi-line block-comment opaque-span (CS-0035)
================

recipe build
    cook "out" >{
        --[[
            here is a } in a block comment
            and another } here
        ]]
        local x = 1
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (exec_lua_block
        (lua_code)))))

================
Cook Lua block with leveled long-string opaque-span (CS-0035)
================

recipe build
    cook "out" >{
        local s = [==[
            this is opaque text
            with } and ]] inside
        ]==]
        print(s)
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (exec_lua_block
        (lua_code)))))

================
Shell block with POSIX heredoc opaque-span (CS-0035)
================

recipe emit
    cook "out.txt" {
        cat <<EOF > out.txt
        a heredoc with a } brace
        and a } here too
        EOF
        echo done
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Shell block with quoted-delim heredoc (CS-0035)
================

recipe emit
    cook "out.txt" {
        cat <<'END' > out.txt
        } stays literal
        END
    }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

==================
Cook with Lua-expression output (CS-0089)
==================

recipe translate
    gather "docs/en/**/*.md"
    cook (input:gsub("/en/", "/fr/")) { cp $<in> $<out> }

---

(source_file
  (recipe
    (explicit_recipe_header
      (identifier))
    (gather_step
      (string))
    (cook_step
      (lua_expr_output
        (lua_expr_default))
      (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

==================
Gather probe member source (CS-0095)
==================

recipe art
    gather cards
    cook "build/art/$<in.id>.png" { gen "$<in.name>" $<out> }

---

(source_file
  (recipe
    (explicit_recipe_header
      (identifier))
    (gather_step
      (identifier))
    (cook_step
      (string
        (placeholder
          (placeholder_ident)))
      (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

==================
Per-member cross-recipe accessor (CS-0098)
==================

recipe mux
    gather scenes
    cook "build/$<in.id>.mp4" { ffmpeg -i $<render[in]> -i $<tts[in]> $<out> }

---

(source_file
  (recipe
    (explicit_recipe_header
      (identifier))
    (gather_step
      (identifier))
    (cook_step
      (string
        (placeholder
          (placeholder_ident)))
      (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))

================
Recipe-body module call
================

recipe app
    cook_cc.bin("app")

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))))

================
Recipe seals stack with bare one- and two-segment refs
================

recipe package
    seal cards ns:tools
    seal assets

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))
    (seal_step
      (identifier))))

================
Recipe seal and final share modifier
================

recipe package
    seal cards ns:tools
    cook "pkg" { bundle } pinned
    cook "scratch" { generate } local
    cook "random" { sample } nondet

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content))
      (cook_mods
        (share_mod)))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content))
      (cook_mods
        (share_mod)))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content))
      (cook_mods
        (share_mod)))))

================
Disposition refs accept the quoted form (CS-0201)
================

recipe ok
    seal "cards"

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (string))))

================
Disposition refs accept a multi-segment key (CS-0201)
================

recipe ok
    seal ns:key:field
    cook "a" { x }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Single share modifier
================

recipe bad
    cook "a" { x } pinned

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content))
      (cook_mods
        (share_mod)))))

================
Recipe seal steps
================

recipe package
    seal cards ns:tools

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))))

================
Recipe-body multi-line module call
================

recipe app
    cook_cc.bin("app", {
      sources = { "main.c" },
    })

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))))

================
Recipe seal repeats bare refs
================

recipe package
    seal cards tools
    cook "pkg" { bundle }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Recipe seal mixes bare and prefixed refs
================

recipe package
    seal ns:tools cards
    cook "a" { x }
    cook "b" { y }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Module call: a long-bracket string is opaque (CS-0208)
================

recipe app
    cook_cc.bin({ links = { [[a}b]], [=[it's -- fine]=] } })
    cook "out" { : }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Module call: a long-bracket comment ends at its closer (CS-0208)
================

recipe app
    cook_cc.bin({ links = { "a" --[[ why } ]] } })
    cook "out" { : }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Module call: a multi-line long-bracket string spans newlines (CS-0208)
================

recipe app
    cook_cc.bin({
        note = [[line one
} line two]],
        links = { "a" },
    })
    cook "out" { : }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (module_call
      (module_call_text))
    (cook_step
      outputs: (string)
      body: (shell_block
        (shell_content)))))

================
Gather over another recipe's outputs (CS-0239)
================

recipe gen
    gather "src/*.conf.in"
    cook "build/$<in.stem>.conf" { render $<in> > $<out> }

recipe check-confs
    gather $<gen>
    test { validate $<in> }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      (string))
    (cook_step
      outputs: (string
        (placeholder
          (placeholder_ident)))
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content))))
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (gather_step
      source: (placeholder
        (placeholder_ident)))
    (test_step
      body: (shell_block
        (shell_content)
        (placeholder
          (placeholder_ident))
        (shell_content)))))
