tree-sitter-cook/test/corpus/test_step.txt
==================
Plain test step
==================

recipe r
    test { true }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (test_step
      body: (shell_block
        (shell_content)))))

==================
Recipe seal applies to test (CS-0225)
==================

recipe r
    seal host
    test { true }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier))
    (test_step
      body: (shell_block
        (shell_content)))))

==================
Recipe seal carries multiple refs to test (CS-0225)
==================

recipe r
    seal a b
    test { true }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))
    (test_step
      body: (shell_block
        (shell_content)))))

==================
Recipe seals a module-prefixed probe for test (CS-0225)
==================

recipe r
    seal cc:toolchain
    test { true }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier))
    (test_step
      body: (shell_block
        (shell_content)))))

==================
Recipe seal repeats bare refs for test (CS-0225)
==================

recipe verify
    seal host toolchain
    test { true }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier))
    (test_step
      body: (shell_block
        (shell_content)))))

==================
Recipe seal repeats four bare refs for test (CS-0225)
==================

recipe verify
    seal a b c d
    test { true }

---

(source_file
  (recipe
    (explicit_recipe_header
      name: (identifier))
    (seal_step
      (identifier)
      (identifier)
      (identifier)
      (identifier))
    (test_step
      body: (shell_block
        (shell_content)))))
